--- a/src/Lonos.Kernel.Loader.x86/Lonos.Kernel.Loader.x86.csproj
+++ b/src/Lonos.Kernel.Loader.x86/Lonos.Kernel.Loader.x86.csproj
@@ -22,6 +22,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>..\..\bin\Lonos.Kernel.Loader.x86.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
