--- a/src/Lonos.Tools.Build/Lonos.Tools.Build.csproj
+++ b/src/Lonos.Tools.Build/Lonos.Tools.Build.csproj
@@ -28,6 +28,7 @@
     <NoWarn>162</NoWarn>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>..\..\bin\Lonos.Tools.Build.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
