--- a/src/Lonos.OS.Loader.x86/Lonos.OS.Loader.x86.csproj
+++ b/src/Lonos.OS.Loader.x86/Lonos.OS.Loader.x86.csproj
@@ -22,6 +22,7 @@
     <NoStdLib>true</NoStdLib>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>..\..\bin\Lonos.OS.Loader.x86.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
