--- a/src/Lonos.Kernel.Core/Lonos.Kernel.Core.csproj
+++ b/src/Lonos.Kernel.Core/Lonos.Kernel.Core.csproj
@@ -45,6 +45,7 @@
     <Compile Include="MemoryManagement\KernelMemoryMapManager.cs" />
     <Compile Include="MemoryManagement\PageAllocators\BuddyPageAllocator.cs" />
     <Compile Include="MemoryManagement\PageAllocators\BuddyAllocatorImplementation.cs" />
+    <Compile Include="MemoryManagement\PageAllocators\InitialPageAllocator2.cs" />
     <Compile Include="MemoryManagement\PageAllocators\InitialPageAllocator.cs" />
     <Compile Include="MemoryManagement\PageAllocators\MultiAllocator.cs" />
     <Compile Include="MemoryManagement\PageAllocatorExtensions.cs" />
