--- a/src/ressources/SharedProjectSettings.targets
+++ b/src/ressources/SharedProjectSettings.targets
@@ -18,6 +18,11 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
+            <Version>2.9.4</Version>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <AdditionalFiles Include="$(MSBuildThisFileDirectory)codeanalysis/stylecop.json" Link="stylecop.json" />
