--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"restructuredtext.confPath": "${workspaceFolder}/docs"
+	"restructuredtext.confPath": "${workspaceFolder}/docs",
+	"files.associations": {
+        "emulator.log": "plaintext",
+    },
 }
