performance counter - broken

--- a/src/Lonos.Kernel.Lib/Lonos.Kernel.Lib.csproj
+++ b/src/Lonos.Kernel.Lib/Lonos.Kernel.Lib.csproj
@@ -71,6 +71,7 @@
     <Compile Include="PageTable\IPageTable.cs" />
     <Compile Include="PageTable\PageTableExtensions.cs" />
     <Compile Include="PageTable\PageTableType.cs" />
+    <Compile Include="PerformanceCounter.cs" />
     <Compile Include="X86_EFlags.cs" />
     <Compile Include="Elf\ElfHeader.cs" />
     <Compile Include="Elf\ElfSectionHeader.cs" />
