--- a/src/Lonos.Native.x86/build
+++ b/src/Lonos.Native.x86/build
@@ -15,6 +15,9 @@ cp EnableExecutionProtection.o ../../bin/$ARCH/Lonos.EnableExecutionProtection.o
 nasm -f bin InterruptReturn.s -o InterruptReturn.o
 cp InterruptReturn.o ../../bin/$ARCH/Lonos.InterruptReturn.o
 
+nasm -f bin CpuCyclesSinceBoot.s -o CpuCyclesSinceBoot.o
+cp CpuCyclesSinceBoot.o ../../bin/$ARCH/Lonos.CpuCyclesSinceBoot.o
+
 nasm -f bin LoadTaskRegister.s -o LoadTaskRegister.o
 cp LoadTaskRegister.o ../../bin/$ARCH/Lonos.LoadTaskRegister.o
 
