--- a/src/Lonos.Kernel.Config/Lonos.Kernel.Config.csproj
+++ b/src/Lonos.Kernel.Config/Lonos.Kernel.Config.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="KConfig.cs" />
+    <Compile Include="KLogLevel.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
