--- a/src/App.Shell/App.Shell.csproj
+++ b/src/App.Shell/App.Shell.csproj
@@ -70,9 +70,12 @@
       <Name>Lonos.Runtime</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Terminal\" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="SysConsole.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
