--- a/src/App.Shell/App.Shell.csproj
+++ b/src/App.Shell/App.Shell.csproj
@@ -70,12 +70,15 @@
       <Name>Lonos.Runtime</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Terminal\" />
-  </ItemGroup>
-  <ItemGroup>
+    <Compile Include="ConsoleServer\ConsoleServer.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="SysConsole.cs" />
+    <Compile Include="ConsoleClient\ConsoleClient.cs" />
+    <Compile Include="ConsoleServer\ConsoleServerConstants.cs" />
+    <Compile Include="Terminal\BiosScreenDevice.cs" />
+    <Compile Include="Terminal\TerminalChar.cs" />
+    <Compile Include="Terminal\TerminalCharAttributes.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
