--- a/src/App.Shell/App.Shell.csproj
+++ b/src/App.Shell/App.Shell.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Terminal\BiosScreenDevice.cs" />
     <Compile Include="Terminal\TerminalChar.cs" />
     <Compile Include="Terminal\TerminalCharAttributes.cs" />
+    <Compile Include="Terminal\TerminalDevice.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
