--- a/src/App.Shell/App.Shell.csproj
+++ b/src/App.Shell/App.Shell.csproj
@@ -72,14 +72,15 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="ConsoleDevice\Hardware\ITextConsoleDevice.cs" />
     <Compile Include="ConsoleServer\ConsoleServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ConsoleClient\ConsoleClient.cs" />
     <Compile Include="ConsoleServer\ConsoleServerConstants.cs" />
-    <Compile Include="Terminal\BiosScreenDevice.cs" />
-    <Compile Include="Terminal\TerminalChar.cs" />
-    <Compile Include="Terminal\TerminalCharAttributes.cs" />
-    <Compile Include="Terminal\TerminalDevice.cs" />
+    <Compile Include="ConsoleDevice\Hardware\BiosTextConsoleDevice.cs" />
+    <Compile Include="ConsoleDevice\ConsoleChar.cs" />
+    <Compile Include="ConsoleDevice\ConsoleCharAttributes.cs" />
+    <Compile Include="ConsoleDevice\ConsoleDevice.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
