publish elf info

--- a/src/App.Shell/App.Shell.csproj
+++ b/src/App.Shell/App.Shell.csproj
@@ -72,6 +72,8 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="ConsoleDevice\Hardware\FrameBufferTextScreenDevice.cs" />
+    <Compile Include="ConsoleDevice\Hardware\Framebuffer.cs" />
     <Compile Include="ConsoleDevice\Hardware\ITextConsoleDevice.cs" />
     <Compile Include="ConsoleServer\ConsoleServer.cs" />
     <Compile Include="Program.cs" />
