--- a/src/Abanu.OS.Loader.x64/Abanu.OS.Loader.x64.csproj
+++ b/src/Abanu.OS.Loader.x64/Abanu.OS.Loader.x64.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Exe</OutputType>
-    <RootNamespace>lonos.OS.Loader.x64</RootNamespace>
+    <RootNamespace>abanu.OS.Loader.x64</RootNamespace>
     <AssemblyName>Abanu.OS.Loader.x64</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
