--- a/src/Abanu.OS.Loader.x86/Abanu.OS.Loader.x86.csproj
+++ b/src/Abanu.OS.Loader.x86/Abanu.OS.Loader.x86.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Exe</OutputType>
-    <RootNamespace>lonos.OS.Loader.x86</RootNamespace>
+    <RootNamespace>abanu.OS.Loader.x86</RootNamespace>
     <AssemblyName>Abanu.OS.Loader.x86</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{7E387209-732C-489D-A759-39D43FB21AFC}</ProjectGuid>
