--- a/src/Abanu.Runtime/Abanu.Runtime.csproj
+++ b/src/Abanu.Runtime/Abanu.Runtime.csproj
@@ -71,6 +71,9 @@
   <ItemGroup>
     <Compile Include="ApplicationRuntime.cs" />
     <Compile Include="Console.cs" />
+    <Compile Include="FileReader.cs" />
+    <Compile Include="FileStream.cs" />
+    <Compile Include="FileWriter.cs" />
     <Compile Include="RuntimeAllocator.cs" />
     <Compile Include="RuntimeMemory.cs" />
   </ItemGroup>
