--- a/src/Abanu.Service.ConsoleServer/Abanu.ConsoleServer.csproj
+++ b/src/Abanu.Service.ConsoleServer/Abanu.ConsoleServer.csproj
@@ -57,6 +57,10 @@
       <Project>{f1daaa4e-ec76-472c-aa35-4eb0e2e16ff5}</Project>
       <Name>Abanu.Drawing</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Abanu.Framebuffer\Abanu.Framebuffer.csproj">
+      <Project>{1836dd47-6e4c-40b8-9628-febfcbf9ee5a}</Project>
+      <Name>Abanu.Framebuffer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Abanu.Kernel.Api\Abanu.Kernel.Api.csproj">
       <Project>{ed52e867-98f0-4fbf-ab06-4812ae5ffb43}</Project>
       <Name>Abanu.Kernel.Api</Name>
@@ -76,10 +80,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Compile Include="ConsoleDevice\Hardware\FramebufferSurface.cs" />
     <Compile Include="ConsoleDevice\Hardware\FrameBufferTextScreenDevice.cs" />
-    <Compile Include="ConsoleDevice\Hardware\Framebuffer.cs" />
-    <Compile Include="ConsoleDevice\Hardware\IFrameBuffer.cs" />
     <Compile Include="ConsoleDevice\Hardware\ITextConsoleDevice.cs" />
     <Compile Include="ConsoleServer\ConsoleServer.cs" />
     <Compile Include="Program.cs" />
