--- a/src/Abanu.Framebuffer/Abanu.Framebuffer.csproj
+++ b/src/Abanu.Framebuffer/Abanu.Framebuffer.csproj
@@ -4,10 +4,10 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>Abanu.Drawing</RootNamespace>
-    <AssemblyName>Abanu.Drawing</AssemblyName>
+    <RootNamespace>Abanu.Framebuffer</RootNamespace>
+    <AssemblyName>Abanu.Framebuffer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <ProjectGuid>{F1DAAA4E-EC76-472C-AA35-4EB0E2E16FF5}</ProjectGuid>
+    <ProjectGuid>{1836DD47-6E4C-40B8-9628-FEBFCBF9EE5A}</ProjectGuid>
     <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -22,7 +22,7 @@
     <NoStdLib>true</NoStdLib>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>..\..\bin\Abanu.Drawing.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Abanu.Framebuffer.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -68,8 +68,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MemorySurface.cs" />
-    <Compile Include="GraphicsAdapter.cs" />
+    <Compile Include="Framebuffer.cs" />
+    <Compile Include="FramebufferSurface.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
