--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,6 +63,7 @@ for:
 
     before_build:
     - sh: chmod +x $APPVEYOR_BUILD_FOLDER/abctl
+    - sh: $APPVEYOR_BUILD_FOLDER/abctl git reset
     - sh: $APPVEYOR_BUILD_FOLDER/abctl configure packages
 
     build: off
