--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,7 +63,7 @@ for:
 
     before_build:
     - sh: chmod +x $APPVEYOR_BUILD_FOLDER/abctl
-    - sh: $APPVEYOR_BUILD_FOLDER/abctl cloud-test
+    - sh: $APPVEYOR_BUILD_FOLDER/abctl configure cloud-test
 
     build: off
 
