--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,7 +59,7 @@ for:
     install:
     - sh: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
     #- sh: sudo apt-get -y upgrade
-    - sh: sudo apt-get install -y --no-install-recommends git wget qemu qemu-system qemu-system-x86
+    - sh: sudo apt-get install -y --no-install-recommends git wget qemu-system-x86 mtools xorriso grub-common grub-pc-bin grub-efi-amd64-bin grub-efi-ia32-bin
 
     before_build:
     - sh: chmod +x $APPVEYOR_BUILD_FOLDER/abctl
@@ -68,4 +68,5 @@ for:
     build: off
 
     build_script:
+    - sh: $APPVEYOR_BUILD_FOLDER/abctl build all
     - sh: $APPVEYOR_BUILD_FOLDER/abctl test cloud
