--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,16 +7,12 @@ jobs:
     # Job name is Greeting
     name: Greeting
     # This job runs on Linux
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
-      # This step uses GitHub's hello-world-javascript-action: https://github.com/actions/hello-world-javascript-action
-      - name: Hello world
-        uses: actions/hello-world-javascript-action@v1
-        with:
-          who-to-greet: 'Mona the Octocat'
-        id: hello
-      # This step prints an output (time) from the previous step's action.
-      - name: Echo the greeting's time
-        run: echo 'The time was ${{ steps.hello.outputs.time }}.'
-      - name: Install packages
-        run: apt-get install -y nasm
+      - uses: actions/checkout@v1
+      - name: Update Package respository
+        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
+      - name: Install Packages
+        run: sudo apt-get install -y --no-install-recommends git wget nasm qemu-system-x86 mtools xorriso grub-common grub-pc-bin grub-efi-amd64-bin grub-efi-ia32-bin
+      - name: debug
+        run: ls $GITHUB_WORKSPACE
