--- a/src/ressources/SharedProjectSettings.targets
+++ b/src/ressources/SharedProjectSettings.targets
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <!--<CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)codeanalysis\default.ruleset</CodeAnalysisRuleSet>-->
     </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeQuality.Analyzers">
             <Version>2.9.5</Version>
@@ -27,4 +28,14 @@
     <ItemGroup>
         <AdditionalFiles Include="$(MSBuildThisFileDirectory)codeanalysis/stylecop.json" Link="stylecop.json" />
     </ItemGroup>
+
+    <Target Name="DisableAnalyzers"
+        BeforeTargets="CoreCompile"
+        Condition="'$(UseRoslynAnalyzers)' == 'false' or '$(RunCodeAnalysis)' == 'false' or '$(RunCodeAnalysis)' == 'never'" >
+        <!--  Disable analyzers via an MSBuild property settable on the command line. -->
+        <ItemGroup>
+            <Analyzer Remove="@(Analyzer)" />
+        </ItemGroup>
+    </Target>
+
 </Project>
