--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
       - uses: actions/checkout@v1
       #- uses: crazy-max/ghaction-chocolatey@v1
       - name: Configure
-        run: $GITHUB_WORKSPACE/external/MOSA-Project/Source/Compile.bat
+        run: "${GITHUB_WORKSPACE}/external/MOSA-Project/Source/Compile.bat"
       - name: Build
         run: msbuild $GITHUB_WORKSPACE/src/Abanu.sln /p:Configuration=Debug -Verbosity:minimal
