--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,10 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v1
+        with:
+          submodules: recursive      
       #- uses: crazy-max/ghaction-chocolatey@v1
       - name: Configure
-        run: "${GITHUB_WORKSPACE}/external/MOSA-Project/Source/Compile.bat"
+        run: "{{ GITHUB_WORKSPACE }}/external/MOSA-Project/Source/Compile.bat"
       - name: Build
         run: msbuild $GITHUB_WORKSPACE/src/Abanu.sln /p:Configuration=Debug -Verbosity:minimal
