--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,9 @@ jobs:
         with:
           submodules: recursive      
       #- uses: crazy-max/ghaction-chocolatey@v1
+      - name: Debug
+        run: "ls"
       - name: Configure
-        run: ${{ GITHUB_WORKSPACE }}/external/MOSA-Project/Source/Compile.bat
+        run: "${{ GITHUB_WORKSPACE }}/external/MOSA-Project/Source/Compile.bat"
       - name: Build
         run: msbuild $GITHUB_WORKSPACE/src/Abanu.sln /p:Configuration=Debug -Verbosity:minimal
