--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       #- uses: crazy-max/ghaction-chocolatey@v1
       - name: Debug
         run: "ls"
-      # - name: Configure
-      #   run: "${{ GITHUB_WORKSPACE }}/external/MOSA-Project/Source/Compile.bat"
-      # - name: Build
-      #   run: msbuild $GITHUB_WORKSPACE/src/Abanu.sln /p:Configuration=Debug -Verbosity:minimal
+      - name: Configure
+        run: "external/MOSA-Project/Source/Compile.bat"
+      - name: Build
+        run: msbuild src/Abanu.sln /p:Configuration=Debug -Verbosity:minimal
